<resources>
    <string name="app_name">Zwitter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="followers">Followers</string>
    <string name="Header_Name_Field">Zwitter</string>
    <string name="Header_Info_Field">help@zwitter.com</string>
    <string name="default_follower_number">0</string>
    <string name="default_following_number">0</string>
    <string name="following">Following</string>
    <string name="default_fav_number">0</string>
    <string name="favourites">Favourites</string>
    <string name="Row_Item_Template">Row Item</string>
    <string name="search_hint">Search</string>
    <string name="tweet_hint">Type Your Tweet Here</string>

    <string name="transition_avatar">AvatarTransition</string>

    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/powerblue</item>
    </array>


</resources>
